--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                 </fieldset>
                 <p id="esquecisenha"><a target="_blank" href=""><b>Esqueci minha senha</b></a></p>
-                <p id="naopossuiconta">Ainda não possui uma conta? <a target="_blank" href=""> <b>Clique aqui</b> </a>
+                <p id="naopossuiconta">Ainda não possui uma conta? <a href="https://madavndl.github.io/cad_usuario_useall/"> <b>Clique aqui</b> </a>
                 </p>
 
             </form>
@@ -59,5 +59,4 @@
     </div>
     <div id="imagem"><img src="assets/logo_useall.png" alt="Logo da useall"></div>
 </body>
-
 </html>
